--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:ssr": "ng run text-racer:serve-ssr",
     "serve:ssr": "node dist/text-racer/server/main.js",
     "build:ssr": "ng build --prod && ng run text-racer:server:production",
-    "prerender": "ng run text-racer:prerender"
+    "prerender": "ng run text-racer:prerender",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
@@ -26,8 +27,10 @@
     "@angular/router": "~9.1.3",
     "@nguniversal/express-engine": "^9.1.0",
     "express": "^4.15.2",
+    "patch-package": "^6.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "ws": "^7.2.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -37,9 +40,10 @@
     "@angular/language-service": "~9.1.3",
     "@nguniversal/builders": "^9.1.0",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "@types/ws": "^7.2.4",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
