--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -9,7 +9,8 @@
   },
   "files": [
     "src/main.server.ts",
-    "server.ts"
+    "server.ts",
+    "api.ts"
   ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
